--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,7 +4,11 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    {{>header}}
-    {{>footer}}
+    <div class="main-content">
+          {{>header}}
+          <p>This application is created by Sanmit Mandal using weatherstack api and mapbox api.</p>
+          <img src="/img/uwu.png" alt="" class="portrait">
+    </div>
+          {{>footer}}
   </body>
 </html>
